{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 33,
  "lineage": "5078a976-beb7-4302-031e-84b704943553",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb653ca2d3203ac1",
            "arn": "arn:aws:ec2:us-east-2:866915201239:instance/i-0ff526109c63d3f16",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ff526109c63d3f16",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-030008d9376df0f47",
            "private_dns": "ip-10-0-1-204.us-east-2.compute.internal",
            "private_ip": "10.0.1.204",
            "public_dns": "ec2-3-135-215-14.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.215.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a44674775e67aeda",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6e4ad365de2eb15",
            "tags": {
              "KeepInstanceRunning": "false",
              "Name": "kausa-controller",
              "Owner": "kausa"
            },
            "tags_all": {
              "KeepInstanceRunning": "false",
              "Name": "kausa-controller",
              "Owner": "kausa"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01301253468220ade"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k-node-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb653ca2d3203ac1",
            "arn": "arn:aws:ec2:us-east-2:866915201239:instance/i-013f4848ebf124757",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-013f4848ebf124757",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c53b81f27982a57f",
            "private_dns": "ip-10-0-1-51.us-east-2.compute.internal",
            "private_ip": "10.0.1.51",
            "public_dns": "ec2-18-216-167-243.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.167.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0465ba55e525bfbb5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6e4ad365de2eb15",
            "tags": {
              "KeepInstanceRunning": "false",
              "Name": "kausa-k-node-1",
              "Owner": "kausa"
            },
            "tags_all": {
              "KeepInstanceRunning": "false",
              "Name": "kausa-k-node-1",
              "Owner": "kausa"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01301253468220ade"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k-node-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb653ca2d3203ac1",
            "arn": "arn:aws:ec2:us-east-2:866915201239:instance/i-00125ac08d994590e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00125ac08d994590e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05f39b19182f14676",
            "private_dns": "ip-10-0-1-154.us-east-2.compute.internal",
            "private_ip": "10.0.1.154",
            "public_dns": "ec2-18-118-146-94.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.146.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c1d780e24a2d483e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6e4ad365de2eb15",
            "tags": {
              "KeepInstanceRunning": "false",
              "Name": "kausa-k-node-2",
              "Owner": "kausa"
            },
            "tags_all": {
              "KeepInstanceRunning": "false",
              "Name": "kausa-k-node-2",
              "Owner": "kausa"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01301253468220ade"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kubernetes-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb653ca2d3203ac1",
            "arn": "arn:aws:ec2:us-east-2:866915201239:instance/i-05f7e1f92f29a2c70",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f7e1f92f29a2c70",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-014e1a0c15ddef405",
            "private_dns": "ip-10-0-1-87.us-east-2.compute.internal",
            "private_ip": "10.0.1.87",
            "public_dns": "ec2-18-218-172-69.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.172.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e6b835f2c56cb51a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6e4ad365de2eb15",
            "tags": {
              "KeepInstanceRunning": "false",
              "Name": "kausa-kubernetes-master",
              "Owner": "kausa"
            },
            "tags_all": {
              "KeepInstanceRunning": "false",
              "Name": "kausa-kubernetes-master",
              "Owner": "kausa"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01301253468220ade"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:866915201239:internet-gateway/igw-0fe3d722de22ceb99",
            "id": "igw-0fe3d722de22ceb99",
            "owner_id": "866915201239",
            "tags": {
              "Name": "kausa-igw",
              "Owner": "kausa"
            },
            "tags_all": {
              "Name": "kausa-igw",
              "Owner": "kausa"
            },
            "vpc_id": "vpc-0ff47344221bdb671"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:866915201239:route-table/rtb-0b36e97fdfc65433a",
            "id": "rtb-0b36e97fdfc65433a",
            "owner_id": "866915201239",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fe3d722de22ceb99",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kausa-rt",
              "Owner": "kausa"
            },
            "tags_all": {
              "Name": "kausa-rt",
              "Owner": "kausa"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff47344221bdb671"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sbn_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d441f577d0848773",
            "route_table_id": "rtb-0b36e97fdfc65433a",
            "subnet_id": "subnet-0b6e4ad365de2eb15"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:866915201239:security-group/sg-01301253468220ade",
            "description": "Allow inbound traffic via SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01301253468220ade",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "My public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kausa-sg",
            "name_prefix": "",
            "owner_id": "866915201239",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kausa-sg",
              "Owner": "kausa"
            },
            "tags_all": {
              "Name": "kausa-sg",
              "Owner": "kausa"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff47344221bdb671"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:866915201239:subnet/subnet-0b6e4ad365de2eb15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6e4ad365de2eb15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866915201239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kausa-subnet",
              "Owner": "kausa"
            },
            "tags_all": {
              "Name": "kausa-subnet",
              "Owner": "kausa"
            },
            "vpc_id": "vpc-0ff47344221bdb671"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:866915201239:vpc/vpc-0ff47344221bdb671",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-085fa912cf74116e2",
            "default_route_table_id": "rtb-05059651548a3ee9a",
            "default_security_group_id": "sg-08e8e1b5c046d7376",
            "dhcp_options_id": "dopt-d19fddba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ff47344221bdb671",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05059651548a3ee9a",
            "owner_id": "866915201239",
            "tags": {
              "Name": "kausa-vpc",
              "Owner": "kausa"
            },
            "tags_all": {
              "Name": "kausa-vpc",
              "Owner": "kausa"
            }
          }
        }
      ]
    }
  ]
}